@@ -1,6 +1,6 @@
 <?php
 /***************************************************************************
- *   Copyright (C) 2005-2007 by Sveta A. Smirnova                          *
+ *   Copyright (C) 2005-2008 by Sveta A. Smirnova                          *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU Lesser General Public License as        *
@@ -45,7 +45,7 @@
 			return $this->splitByRegexp;
 		}
 		
-		public function import($scope)
+		public function import(array $scope)
 		{
 			if (!$result = parent::import($scope))
 				return $result;
