@@ -1,6 +1,6 @@
 <?php
 /****************************************************************************
- *   Copyright (C) 2004-2007 by Konstantin V. Arkhipov, Anton E. Lebedevich *
+ *   Copyright (C) 2004-2008 by Konstantin V. Arkhipov, Anton E. Lebedevich *
  *                                                                          *
  *   This program is free software; you can redistribute it and/or modify   *
  *   it under the terms of the GNU Lesser General Public License as         *
@@ -15,7 +15,7 @@
 	**/
 	final class PrimitiveBoolean extends BasePrimitive
 	{
-		public function import($scope)
+		public function import(array $scope)
 		{
 			if (isset($scope[$this->name]))
 				$this->value = true;
