@@ -1,6 +1,6 @@
 <?php
 /***************************************************************************
- *   Copyright (C) 2004-2007 by Konstantin V. Arkhipov                     *
+ *   Copyright (C) 2004-2008 by Konstantin V. Arkhipov                     *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU Lesser General Public License as        *
@@ -97,7 +97,7 @@
 				);
 		}
 		
-		public function import($scope)
+		public function import(array $scope)
 		{
 			if (
 				!BasePrimitive::import($scope)
