@@ -1,6 +1,6 @@
 <?php
 /***************************************************************************
- *   Copyright (C) 2007 by Ivan Y. Khvostishkov                            *
+ *   Copyright (C) 2007-2008 by Ivan Y. Khvostishkov                       *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU Lesser General Public License as        *
@@ -15,7 +15,7 @@
 	**/
 	final class PrimitiveHttpUrl extends PrimitiveString
 	{
-		public function import($scope)
+		public function import(array $scope)
 		{
 			if (!$result = parent::import($scope))
 				return $result;
