@@ -1,6 +1,6 @@
 <?php
 /****************************************************************************
- *   Copyright (C) 2007 by Konstantin V. Arkhipov                           *
+ *   Copyright (C) 2007-2008 by Konstantin V. Arkhipov                      *
  *                                                                          *
  *   This program is free software; you can redistribute it and/or modify   *
  *   it under the terms of the GNU Lesser General Public License as         *
@@ -15,7 +15,7 @@
 	**/
 	final class PrimitiveInet extends BasePrimitive
 	{
-		public function import($scope)
+		public function import(array $scope)
 		{
 			if (!BasePrimitive::import($scope))
 				return null;
