@@ -1,6 +1,6 @@
 <?php
 /***************************************************************************
- *   Copyright (C) 2004-2007 by Anton E. Lebedevich                        *
+ *   Copyright (C) 2004-2008 by Anton E. Lebedevich                        *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU Lesser General Public License as        *
@@ -51,7 +51,7 @@
 			return parent::setDefault($default);
 		}
 		
-		public function import($scope)
+		public function import(array $scope)
 		{
 			if (!BasePrimitive::import($scope))
 				return null;
